Updated some files from newest Cosmo_PMC-svn (from cc).
Removed some files from tools that exist in pmclib, and adapted header files.

--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -2970,6 +2970,9 @@ through the Millennium Simulation \citep{SHJKS09}.
   \cite{CFHTLenS-2pt-tomo}   & CFHTLenS tomographic weak lensing: quantifying accurate redshift distributions \\
   \cite{CFHTLenS-mod-grav}   & CFHTLenS: testing the laws of gravity with tomographic weak lensing and redshift-space distortions \\
   \cite{CFHTLenS-IA}         & CFHTLenS tomographic weak lensing cosmological parameter constraints: Mitigating the impact of intrinsic galaxy alignments \\
+  \cite{CFHTLenS-2+3pt}      & CFHTLenS combined second- and third-order statistics \\
+  \cite{Coupon15}            & Joint lensing and clustering in CFHTLenS \\
+  \cite{2017arXiv170302049D}  & Clustering in VIMOS \\
  \cite{SHJKS09} & Evidence of the accelerated expansion of the
   Universe from weak lensing tomography with COSMOS \\
   \cite{MKS10} & On the impact of intergalactic dust on cosmology with
